<resources>
    <string name="app_name">Group#3_HW03</string>
    <string name="welcome">Welcome to Trivia App</string>
    <string name="exit">Exit</string>
    <string name="start">Start Trivia</string>
    <string name="loading">Loading Trivia</string>
    <string name="questionNumber">Q1</string>
    <string name="timeLeft">Time Left: X seconds</string>
    <string name="question">Question</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="loadingImg">Loading Image</string>
    <string name="triviaStats">Trivia Stats</string>
    <string name="correctAnswers">Correct Answers</string>
    <string name="percentage">0%</string>
    <string name="tryAgain">Try again and see if you can get all the correct answers!</string>
    <string name="tryAgain2">Try Again</string>
</resources>
