<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dimanor3.group3_hw03.TriviaActivity">

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#ADD8E6"
        android:text="@string/questionNumber"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="#ADD8E6"
        android:text="@string/timeLeft"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="356dp"
        android:layout_height="193dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumber"
        app:srcCompat="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"/>

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:onClick="quit"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="nextQuestion"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="151dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/loadingImg"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>
